# ai-lunch-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  slides.md
lunch_bot/: __init__.py  __main__.py  cli.py  config.py  downloader.py  ocr.py  order.py  server.py
